media queries added + div overflow scrollbars solved

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Oxygen);
 html {
 	font-size: 100%;
+	min-height: 100%; /*Avoids grey gap bellow bakground image for mobile devices*/
 }
 
 body {
@@ -18,18 +19,36 @@ body {
   	background-size: cover;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-height: 600px) {
     html {
     	font-size: 70%;
+    }
+}
+
+@media only screen and (max-height: 400px) {
+    html {
+    	font-size: 60%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    html {
+    	font-size: 80%;
     }
     body {
     	background-image: url("../img/index_background_925x217.jpg");
     	background-position: 53% 50%;
 		background-repeat: no-repeat;
-		-webkit-background-size: 180% 100%;
-	  	-moz-background-size: 180% 100%;
-	  	-o-background-size: 180% 100%;
-	  	background-size: 180% 100%;    	
+		-webkit-background-size: 150% 110%;
+	  	-moz-background-size: 150% 110%;
+	  	-o-background-size: 150% 110%;
+	  	background-size: 150% 110%;    	
+    }
+}
+
+@media only screen and (max-width: 480px) and (max-height: 450px) {
+    html {
+    	font-size: 65%;
     }
 }
 
@@ -40,16 +59,15 @@ header {
 
 footer {
 	position: absolute;
-	bottom: 0rem;
+	bottom: 0;
+	padding-top: 0.1rem;
+	padding-bottom: 0.1rem; 
+	margin: 0;
+	display: block;
 	width: 100%;
 	text-align: center;
 	color: rgba(200, 200, 200, 0.9);
 	background-color: rgb(30, 30, 30);	
-}
-
-.space-container {
-	width: 100vw;
-	height: 25vh;
 }
 
 h1, h2 {
@@ -92,7 +110,7 @@ input {
 
 input:focus {
 	color: rgba(241, 243, 242, 0.8);	
-	background-color: rgb(156, 120, 93, 0.9);
+	background-color: rgba(156, 120, 93, 0.9);
 }
 
 /*placeholder browser compatibility.*/
@@ -137,7 +155,18 @@ input:focus::-ms-input-placeholder {
 	color: rgba(241, 243, 242, 0.9);
 }
 
+.space-container {
+	width: 100%;
+	height: 25vh;
+	overflow: hidden;
+}
+
 #submit-symbol-container {
+	position: absolute;
+	/*overflow: auto;*/
+	overflow: hidden;
+	/*height: 0;*/
+	width: 100%;
 	text-align: center;	
 }
 
@@ -145,11 +174,11 @@ input:focus::-ms-input-placeholder {
 	position: relative;
 	left: 3rem;
 	color: rgba(200, 200, 200, 0);
-	text-shadow: rgba(255, 204, 0, 0) 0 0 0rem;
+	text-shadow: rgba(48, 48, 48, 0) 0 0 0rem;
 	/*background-color: rgb(50, 50, 50);	*/
 	font-size: 9rem;
-	transition: 1s;
-	-webkit-transition: 1s;
+	transition: all 1s;
+	-webkit-transition: all 1s;
 }
 
 #ctrl {
